# printf

./: CMakeLists.txt  Makefile  a.out  dispars_char.c  dispars_string.c  ft_dispars.c  ft_flag_dot.c  ft_flag_pars.c  ft_flags_c.c  ft_flags_count.c  ft_hex_dispars.c  ft_isdigit.c  ft_itoa.c  ft_printf.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_ch.c  ft_putstr_fd.c  ft_strlen.c  ft_type_pars.c  libft.h  libft.h.gch  libftprintf.h  print_int.c  treat_width.c
libft/: Makefile  libft.h
